--- a/src/Template.css
+++ b/src/Template.css
@@ -9940,3 +9940,41 @@ a.text-dark:hover {
         border: 1px solid #ddd !important
     }
 }
+
+
+
+.safron-img{
+    width: 100% ;
+    height: 100vh;
+background-position: center;
+background-size: cover;
+background-repeat: no-repeat;
+    background-image: url(../public/images/Saffron-login.jpg);
+}
+
+ @media (max-width:718px){
+    .safron-img{
+width: 100%;
+ height: 80vh;
+background-position: center;
+background-size: cover;
+background-repeat: no-repeat;
+background-image: none;
+background-image: url(../public/images/Saffron-login.jpg);
+
+    }
+ }
+
+
+ @media (max-width:550px){
+    .safron-img{
+width: 100%;
+ height: 70vh;
+background-position: center;
+background-size: cover;
+background-repeat: no-repeat;
+background-image: none;
+background-image: url(../public/images/saffrontwo.jpg);
+
+    }
+ }
