--- a/src/Template.css
+++ b/src/Template.css
@@ -9943,38 +9943,79 @@ a.text-dark:hover {
 
 
 
-.safron-img{
-    width: 100% ;
+.safron-img {
+    width: 100%;
     height: 100vh;
-background-position: center;
-background-size: cover;
-background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
     background-image: url(../public/images/Saffron-login.jpg);
 }
 
- @media (max-width:718px){
-    .safron-img{
-width: 100%;
- height: 80vh;
-background-position: center;
-background-size: cover;
-background-repeat: no-repeat;
-background-image: none;
-background-image: url(../public/images/Saffron-login.jpg);
+@media (max-width:718px) {
+    .safron-img {
+        width: 100%;
+        height: 80vh;
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-image: none;
+        background-image: url(../public/images/Saffron-login.jpg);
 
     }
- }
+}
 
 
- @media (max-width:550px){
-    .safron-img{
-width: 100%;
- height: 70vh;
-background-position: center;
-background-size: cover;
-background-repeat: no-repeat;
-background-image: none;
-background-image: url(../public/images/saffrontwo.jpg);
+@media (max-width:550px) {
+    .safron-img {
+        width: 100%;
+        height: 70vh;
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-image: none;
+        background-image: url(../public/images/saffrontwo.jpg);
 
     }
- }
+}
+
+.hello-boy {
+    display: none;
+}
+
+@media(max-width:992px) {
+    .hello-boy {
+        display: block;
+    }
+
+
+}
+
+.main-div {
+    display: flex;
+    justify-content: space-between;
+    padding-left: 28px;
+    height: 30px;
+    align-items: center;
+    padding-right: 48px;
+}
+
+@media(max-width:540px) {
+    .main-div {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        padding-top: 5px;
+        height: 60px;
+        align-items: center;
+        padding-bottom: 5px;
+    }
+}
+
+@media(max-width:768px) {
+    .second-row {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+}
