--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1426,7 +1426,7 @@ ul.minicart .cart-price .new {
     background-image: url("https://sportsidprovider.online/img/slider/slider_bg.jpg");
     background-position: center;
     background-size: cover;
-    padding: 46px 0;
+    /* padding: 46px 0; */
 }
 
 .slider-content h6 {
